--- a/style.css
+++ b/style.css
@@ -13,13 +13,6 @@ padding: 20px;
 }
 
 
-h1 {
-
-margin-bottom: 30px;
-
-}
-
-
 .container {
 
 display: grid;
@@ -37,13 +30,13 @@ margin: auto;
 
 button {
 
-height: 150px;
+height: 120px;
 
-font-size: 22px;
+font-size: 20px;
 
 border: none;
 
-border-radius: 20px;
+border-radius: 15px;
 
 background-color: #1976D2;
 
@@ -59,7 +52,7 @@ align-items: center;
 
 cursor: pointer;
 
-transition: 0.2s;
+margin: 5px;
 
 }
 
@@ -68,30 +61,54 @@ button:active {
 
 background-color: #0D47A1;
 
-transform: scale(0.95);
-
 }
 
 
 .emoji {
 
-font-size: 40px;
-
-margin-bottom: 10px;
+font-size: 35px;
 
 }
 
 
-/* Responsivo celular */
 
-@media(max-width:500px){
+/* MODAL */
 
-button{
+.modal {
 
-height:130px;
+display: none;
 
-font-size:20px;
+position: fixed;
+
+top: 0;
+
+left: 0;
+
+width: 100%;
+
+height: 100%;
+
+background: rgba(0,0,0,0.5);
+
+justify-content: center;
+
+align-items: center;
 
 }
+
+
+.modal-content {
+
+background: white;
+
+padding: 20px;
+
+border-radius: 15px;
+
+display: flex;
+
+flex-direction: column;
+
+gap: 10px;
 
 }
